src/tui/snapshots/kanban4ai__tui__tests__projects_list.snap
---
source: src/tui/tests.rs
expression: rendered
---
┌ Projects · Enter open · n new · r rename · p path · d delete · / filter · q quit ────────────┐
│+ Create project for /tmp/k4ai-snap-cwd                                                       │
│Demo Board           1/1/0/0 /tmp/k4ai-snap-work                                        never │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
 Projects │ Enter open · n new · r rename · p path · d delete · / filter · ? help               

--- style runs ---
0:0-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
1:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
1:1-95 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset).bold()
1:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
2:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
2:1-30 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
2:30-94 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Reset).underline_color(Color::Reset)
2:94-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
2:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
3:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
3:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
3:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
4:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
4:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
4:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
5:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
5:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
5:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
6:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
6:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
6:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
7:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
7:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
7:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
8:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
8:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
8:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
9:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
9:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
9:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
10:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
10:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
10:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
11:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
11:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
11:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
12:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
12:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
12:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
13:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
13:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
13:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
14:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
14:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
14:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
15:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
15:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
15:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
16:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
16:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
16:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
17:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
17:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
17:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
18:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
18:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
18:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
19:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
19:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
19:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
20:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
20:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
20:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
21:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
21:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
21:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
22:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
22:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
22:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
23:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
23:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
23:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
24:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
24:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
24:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
25:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
25:1-95 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
25:95-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
26:0-96 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
27:0-96 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
